--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,24 @@ a:hover {
 	color: blue;
 	text-decoration: underline;
 }
-.yeet{
-	height: 200px;
-}
-figure{
-	margin-left: 100px;
-	align-items: center;
+.bloom{
+	margin-left: 150px
 }
 h2{
-	margin-left: 450px
+	margin-left: 200px
+}
+.yeet{
+	height: 200px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 li{
-	margin-left: 250px
+	margin-left: 150px
+}
+figure{
+	margin-left: 100px
 }
 img{
-	padding: 10px
+	min-height: 50%; min-width: 50%;
+	max-height: 60%; max-width: 60%;
 }
