--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{
+	background-color: #ffeaa7;
 	margin:0;
 	font-size: 24px;
 }
@@ -23,7 +24,7 @@ h2{
 	margin-left: 50px;
 	font-family: 'Lobster', cursive;
 	font-size: 42px;
-	color: orange;
+	color: #f0932b;
 }
 .hmmmm{
 	margin: 0 100px;
@@ -38,7 +39,7 @@ li{
 }
 footer{
 	margin-top: 30px;
-	font-size: 16px
+	font-size: 20px
 }
 p{
 	font-family: 'Comfortaa', cursive;
@@ -50,5 +51,5 @@ p{
 	min-height: 50%;
 	min-width: 50%;
 	max-height: 100%;
-	max-width: 100%
+	max-width: 100;
 }
